# C-course

./: CMakeLists.txt
Exam/: CMakeLists.txt
Exam examples/: CMakeLists.txt
Exam examples/Exercise 1/: CMakeLists.txt  main.c
Exam examples/Exercise 10/: CMakeLists.txt  main.c
Exam examples/Exercise 11/: CMakeLists.txt  file.txt  main.c
Exam examples/Exercise 2/: CMakeLists.txt  main.c
Exam examples/Exercise 3/: CMakeLists.txt  main.c
Exam examples/Exercise 4/: CMakeLists.txt  main.c
Exam examples/Exercise 5/: CMakeLists.txt  main.c
Exam examples/Exercise 6/: CMakeLists.txt  main.c
Exam examples/Exercise 7/: CMakeLists.txt  main.c
Exam examples/Exercise 8/: CMakeLists.txt  main.c
Exam examples/Exercise 9/: CMakeLists.txt  main.c
Exam/Exercise 4/: CMakeLists.txt  main.c
Exam/Exercise 5/: CMakeLists.txt  file.txt  main.c
Exam/Exercise 6/: CMakeLists.txt  bills.txt  main.c
Lesson 1/: CMakeLists.txt
Lesson 1/Exercise 1/: CMakeLists.txt  main.c
Lesson 1/Exercise 2/: CMakeLists.txt  Guide.txt  main.c
Lesson 1/Exercise 3/: CMakeLists.txt  main.c
Lesson 1/Exercise 4/: CMakeLists.txt  main.c
Lesson 1/Exercise 5/: CMakeLists.txt  main.c
Lesson 1/Exercise 6/: CMakeLists.txt  main.c
Lesson 2/Exercise 1/: CMakeLists.txt  main.c
Lesson 2/Exercise 2/: CMakeLists.txt  main.c  main.h
Lesson 2/Exercise 3/: CMakeLists.txt  main.c
Lesson 3/: CMakeLists.txt
Lesson 3/Exercise 1/: CMakeLists.txt  main.c
Lesson 3/Exercise 3/: CMakeLists.txt  main.c
Lesson 4/: CMakeLists.txt
Lesson 4/Exercise 1/: CMakeLists.txt  main.c
Lesson 4/Exercise 2/: CMakeLists.txt  main.c
Lesson 5/: CMakeLists.txt
Lesson 6/: CMakeLists.txt
Lesson 7/: CMakeLists.txt
(+14 files in other folders)
