cmake_minimum_required(VERSION 3.22)
project(Exercise1 C)

set(CMAKE_C_STANDARD 11)

add_subdirectory("Lesson 1/Exercise 1")
add_subdirectory("Lesson 1/Exercise 2")
add_subdirectory("Lesson 1/Exercise 3")
add_subdirectory("Lesson 1/Exercise 4")
add_subdirectory("Lesson 1/Exercise 5")
add_subdirectory("Lesson 1/Exercise 6")

add_subdirectory("Lesson 2/Exercise 1")
add_subdirectory("Lesson 2/Exercise 2")
add_subdirectory("Lesson 2/Exercise 3")

add_subdirectory("Lesson 3/Exercise 1")
add_subdirectory("Lesson 3/Exercise 3")

add_subdirectory("Lesson 4/Exercise 1")
add_subdirectory("Lesson 4/Exercise 2")
add_subdirectory("Lesson 4/Exercise 3")

add_subdirectory("Lesson 5/Exercise 2")

add_subdirectory("Lesson 6/Exercise 1")

add_subdirectory("Lesson 7/Exercise 1")
add_subdirectory("Lesson 7/Exercise 2")