cmake_minimum_required(VERSION 3.22)
project(C-course C)

set(CMAKE_C_STANDARD 11)

add_subdirectory("Lesson 1")
add_subdirectory("Lesson 2")
add_subdirectory("Lesson 3")
add_subdirectory("Lesson 4")
add_subdirectory("Lesson 5")
add_subdirectory("Lesson 6")
add_subdirectory("Lesson 7")
add_subdirectory("Lesson 8")

add_subdirectory("Exam examples")